# depy

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
examples/: complex.rust  easy.csharp  easy.rust
src/: args.rs  drawer.rs  main.rs  model.rs
src/langs/: csharp.rs  mod.rs  rust.rs
